oci-managed/argocd/argocd_ingress_route.tfpl.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: ${namespace}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.${my_domain}`)
      priority: 10
      services:
        - name: argo-argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.${my_domain}`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argo-argocd-server
          port: 80
          scheme: h2c
  tls: {}
